# shelf-mirror

./: .gitignore  README.md  meson.build
.github/workflows/: release.yml
data/: io.github.breitburg.shelf-mirror.gschema.xml
packaging/: build-deb.sh
src/: Config.vala.in  Indicator.vala
